syntax = "proto3";

package blockjoy.api.v1;

import "google/protobuf/empty.proto";
import "node.proto";

message NodeUpdateRequest {
  optional string request_id = 1;

  string id = 2;
  optional string ip = 3;
  optional bool self_update = 4;
  optional int64 block_height = 6;
  optional string onchain_name = 7;
  optional Node.ApplicationStatus app_status = 8;
  optional Node.ContainerStatus container_status = 9;
  optional Node.SyncStatus sync_status = 10;
  optional Node.StakingStatus staking_status = 11;
  optional string address = 12;
}

service NodeService {
  /* Update a single node */
  rpc Update(NodeUpdateRequest) returns (google.protobuf.Empty);
}
